<resources>
    <string name="app_name">Expense Manager</string>
    <string name="signup">SIGN UP</string>
    <string name="signIn">SIGN IN</string>
    <string name="name">Name</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="username">Enter name</string>
    <string name="EnterEmail">Enter email</string>
    <string name="EnterPass">Enter password</string>
    <string name="EnterName">Enter name</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="SignInBtn">Sign In</string>
    <string name="checkLogin">isLogged</string>
    <string name="accountLine">Already have an account?</string>
    <string name="profit_format">%1$.2f</string>
    <string name="loss_format">%1$.2f</string>
    <string name="Expense">Expense</string>
    <string name="Income">Income</string>
    <string name="emptyTitle">Title cant be Empty</string>
    <string name="emptyDescription">Description cant be Empty</string>
    <string name="emptyAmount">Amount cant be Empty</string>
    <string name="emptyDate">Date is Empty</string>
    <string name="passNotCorrect">Password Incorrect</string>
    <string name="emailNotCorrect">Email not Exists</string>
    <string name="userExists">User Already Exists</string>
    <string name="validName">Name is not Valid</string>
    <string name="validPass">Password is not Valid</string>
    <string name="validEmail">Email is not Valid</string>
</resources>