<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activites.SignUpActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvSigIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="35dp"
                android:textSize="30sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSigIn"
                android:text="@string/name"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="45dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="280dp"
                android:layout_height="49dp"
                android:layout_below="@id/tvName"
                android:layout_centerInParent="true"
                android:layout_marginLeft="40dp"
                android:hint="@string/EnterName"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:text="@string/email"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="280dp"
                android:layout_height="49dp"
                android:layout_below="@id/tvEmail"
                android:layout_centerInParent="true"
                android:layout_marginLeft="40dp"
                android:hint="@string/EnterEmail"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:text="@string/pass"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="280dp"
                android:id="@+id/Password"
                android:layout_below="@id/tvPass"
                android:layout_centerInParent="true"
                android:layout_height="49dp"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="280dp"
                    android:id="@+id/etPass"
                    android:layout_height="49dp"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Password"
                android:layout_centerInParent="true"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/black"
                android:text="@string/SignupBtn"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accountLine"
                    android:layout_marginTop="45dp"
                    android:layout_marginLeft="60dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/btnSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn"
                    android:text="@string/SignInBtn"
                    android:layout_marginTop="45dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>
</layout>